:sparkles: Added custom commands property