@@ -10,6 +10,8 @@ import org.apache.commons.lang.WordUtils;
 import org.bukkit.Bukkit;
 import org.bukkit.Color;
 import org.bukkit.Material;
+import org.bukkit.attribute.Attribute;
+import org.bukkit.attribute.AttributeModifier;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandExecutor;
 import org.bukkit.command.CommandSender;
@@ -18,6 +20,8 @@ import org.bukkit.enchantments.Enchantment;
 import org.bukkit.entity.EntityType;
 import org.bukkit.entity.HumanEntity;
 import org.bukkit.entity.Player;
+import org.bukkit.event.block.Action;
+import org.bukkit.inventory.EquipmentSlot;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.potion.PotionEffectType;
 import org.jetbrains.annotations.NotNull;
@@ -40,7 +44,7 @@ public class CreatorCommand implements CommandExecutor, TabCompleter {
 		final String sub = args[0];
 
 		switch (sub) {
-			case "get" -> {
+			case "get":
 				if (!(sender instanceof Player)) {
 					sender.sendMessage(Utils.colored("&cThis command cannot be executed in the console."));
 					return false;
@@ -57,8 +61,8 @@ public class CreatorCommand implements CommandExecutor, TabCompleter {
 						.orElse(null);
 				if (player == null)
 					player = ((Player) sender).getPlayer();
-				final String id = args[1];
-				final @Nullable CustomItem item = ItemCreator.getInstance().getApi().getItemFromId(id);
+				String id = args[1];
+				@Nullable CustomItem item = ItemCreator.getInstance().getApi().getItemFromId(id);
 				if (item == null) {
 					sender.sendMessage(Utils.colored("&cThere's no custom item with that id. Use &4/ic list&c to see them all."));
 					return false;
@@ -66,16 +70,14 @@ public class CreatorCommand implements CommandExecutor, TabCompleter {
 				sender.sendMessage(Utils.colored("&aGive complete!"));
 				player.getInventory().addItem(item.asItem());
 				return true;
-			}
-			case "menu" -> {
+			case "menu":
 				if (!(sender instanceof Player)) {
 					sender.sendMessage(Utils.colored("&cThis command cannot be executed in the console."));
 					return false;
 				}
 				new ItemListGUI(ItemCreator.getInstance().getApi().loadAllItems()).open((Player) sender);
 				return true;
-			}
-			case "generate_default" -> {
+			case "generate_default":
 				sender.sendMessage(Utils.colored("&6Generating ..."));
 				ItemCreator.getInstance().saveResource("items/cactus_helmet.yml", true);
 				ItemCreator.getInstance().saveResource("items/copper_ingot.yml", true);
@@ -83,17 +85,17 @@ public class CreatorCommand implements CommandExecutor, TabCompleter {
 				ItemCreator.getInstance().saveResource("items/golem_spawner.yml", true);
 				sender.sendMessage(Utils.colored("&aSuccess! Item generated in &2plugins/ItemCreator/items/&a !"));
 				return true;
-			}
-			case "convert" -> {
-				if (!(sender instanceof final Player player)) {
+			case "convert":
+				if (!(sender instanceof Player)) {
 					sender.sendMessage(Utils.colored("&cThis command cannot be executed in the console."));
 					return false;
 				}
+				player = (Player) sender;
 				if (args.length == 1) {
 					sender.sendMessage(Utils.colored("&cYou must specify the new custom item's ID."));
 					return false;
 				}
-				final String id = args[1];
+				id = args[1];
 				if (ItemCreator.getInstance().getApi().exits(id)) {
 					sender.sendMessage(Utils.colored("&cA Custom Item with that ID already exist."));
 					return false;
@@ -104,7 +106,7 @@ public class CreatorCommand implements CommandExecutor, TabCompleter {
 					return false;
 				}
 				final ItemStack stack = player.getInventory().getItemInMainHand().clone();
-				final CustomItem item = new CustomItem(id);
+				item = new CustomItem(id);
 				player.sendMessage(Utils.colored("&eLoading properties ..."));
 				try {
 					int i = 1;
@@ -126,7 +128,7 @@ public class CreatorCommand implements CommandExecutor, TabCompleter {
 						i++;
 					}
 					player.sendMessage(Utils.colored("&aFinished!"));
-					new EditorGUI(item, true).open(player);
+					new EditorGUI(item, true, player).open(player);
 				} catch (Exception ex) {
 					player.sendMessage(Utils.colored("&4An internal error occured while parsing your item:"),
 							Utils.colored("  &c" + ex.getMessage()));
@@ -134,39 +136,62 @@ public class CreatorCommand implements CommandExecutor, TabCompleter {
 					return false;
 				}
 				return true;
-			}
-			case "list" -> {
+			case "list":
 				if (args.length == 1) {
 					sender.sendMessage(Utils.colored("&cEnumeration needed: &6enchantments&c, &6potion_effects"));
 					return false;
 				}
 				switch (args[1]) {
-					case "enchantments" -> {
+					case "enchantments":
 						sender.sendMessage(Utils.colored("&6List of enchantments &e("+ Enchantment.values().length +")&6:"));
 						for (Enchantment enchantment : Enchantment.values())
 							sender.sendMessage(Utils.colored("  &6→ &e" +
 									WordUtils.capitalize(enchantment.getKey().getKey().replace('_', ' ').toLowerCase(Locale.ENGLISH))
 									+ " &7(ID: "+enchantment.getName()+")"));
 						return true;
-					}
-					case "potion_effects" -> {
+					case "potion_effects":
 						sender.sendMessage(Utils.colored("&6List of Potion Effects &e("+ PotionEffectType.values().length +")&6:"));
 						for (PotionEffectType enchantment : PotionEffectType.values())
 							sender.sendMessage(Utils.colored("  &6→ &e" +
 									WordUtils.capitalize(enchantment.getName().replace('_', ' ').toLowerCase(Locale.ENGLISH))
 									+ " &7(ID: "+enchantment.getId()+")"));
 						return true;
-					}
-					case "entities" -> {
+					case "entities":
 						sender.sendMessage(Utils.colored("&6List of Entities &e("+ EntityType.values().length +")&6:"));
 						for (EntityType enchantment : EntityType.values())
 							sender.sendMessage(Utils.colored("  &6→ &e" +
 									WordUtils.capitalize(enchantment.getName().replace('_', ' ').toLowerCase(Locale.ENGLISH))
 									+ " &7(ID: "+enchantment.name()+")"));
 						return true;
-					}
+					case "attributes":
+						sender.sendMessage(Utils.colored("&6List of Attributes &e("+ Attribute.values().length +")&6:"));
+						for (Attribute attribute : Attribute.values())
+							sender.sendMessage(Utils.colored("  &6→ &e" +
+									Utils.beauty(attribute)
+									+ " &7(ID: "+attribute.name()+")"));
+						return true;
+					case "operations":
+						sender.sendMessage(Utils.colored("&6List of Operations &e("+ AttributeModifier.Operation.values().length +")&6:"));
+						for (AttributeModifier.Operation attribute : AttributeModifier.Operation.values())
+							sender.sendMessage(Utils.colored("  &6→ &e" +
+									Utils.beauty(attribute)
+									+ " &7(ID: "+attribute.name()+")"));
+						return true;
+					case "actions":
+						sender.sendMessage(Utils.colored("&6List of Actions &e("+ Action.values().length +")&6:"));
+						for (Action attribute : Action.values())
+							sender.sendMessage(Utils.colored("  &6→ &e" +
+									Utils.beauty(attribute)
+									+ " &7(ID: "+attribute.name()+")"));
+						return true;
+					case "slots":
+						sender.sendMessage(Utils.colored("&6List of Equipment Slots &e("+ EquipmentSlot.values().length +")&6:"));
+						for (EquipmentSlot attribute : EquipmentSlot.values())
+							sender.sendMessage(Utils.colored("  &6→ &e" +
+									Utils.beauty(attribute)
+									+ " &7(ID: "+attribute.name()+")"));
+						return true;
 				}
-			}
 		}
 		sendHelp(sender);
 		return true;
@@ -180,7 +205,7 @@ public class CreatorCommand implements CommandExecutor, TabCompleter {
 				Utils.colored("&6/ic help &7- &eShow this help page"),
 				Utils.colored("&6/ic get <item id> &7- &eGet the specified custom item"),
 				Utils.colored("&6/ic menu &7- &eOpen the main ItemCreator menu"),
-				Utils.colored("&6/ic list (enchantments|potion_effects|entities) &7- &eList possible values of enumeration"),
+				Utils.colored("&6/ic list (enchantments|actions|potion_effects|entities|operations|attributes|slots) &7- &eList possible values of enumeration"),
 				Utils.colored("&6/ic convert <item id> &7- &cBETA &eConvert the item you're holding into an ItemCreator item."),
 				Utils.colored("&6/ic generate_default &7- &eGenerate the default items ItemCreator provide to see everything it can do."),
 				Utils.colored("&1")
@@ -202,10 +227,10 @@ public class CreatorCommand implements CommandExecutor, TabCompleter {
 								.loadAllItems()
 								.stream()
 								.map(CustomItem::getId)
-								.toList());
+								.collect(Collectors.toList()));
 						break;
 					case "list":
-						completions.addAll(Arrays.asList("enchantments", "potion_effects", "entities"));
+						completions.addAll(Arrays.asList("enchantments", "actions", "potion_effects", "entities", "slots", "attributes", "operations"));
 						break;
 				}
 			} else if (args.length == 3) {
@@ -214,7 +239,7 @@ public class CreatorCommand implements CommandExecutor, TabCompleter {
 						completions.addAll(Bukkit.getOnlinePlayers()
 								.stream()
 								.map(HumanEntity::getName)
-								.toList());
+								.collect(Collectors.toList()));
 						break;
 				}
 			}
